raffia/tests/error/scss/forward-at-rule/empty.snap
---
source: raffia/tests/error.rs
---
error: string is expected
  ┌─ empty.scss:1:9
  │
1 │ @forward;
  │         ^


